test/tests/InstanceFieldFromClass.expected
InstanceFieldFromClass.frost:6:27: error: cannot reference 'self' from a @class context
InstanceFieldFromClass.frost:11:23: error: instance field 'x' cannot be accessed from a class context
2 errors
